2012-06-11 <ckuhl@ipb-halle.de>
 * Version 1.13.4
 * Add ByteCompile: TRUE
 * Bugfix for findIsotopes, clears subscript out of bound error
2012-05-25 <ckuhl@ipb-halle.de>
 * Version 1.13.2
 * First changes for improved isotope detection
2012-04-12 <ckuhl@ipb-halle.de>
 * Version 1.13.1
 * Bugfix for findIsotopes to fix not consecutive isotope label like [M]+,[M+2]+ without [M+1]+
2012-03-19 <ckuhl@ipb-halle.de>
 * Version 1.11.10
 * Bugfix in groupCorr, where the function throws an error if argument xraw is not null
2012-03-19 <ckuhl@ipb-halle.de>
 * Version 1.11.9
 * Bugfix in findAdducts, where adduct annotation filtering was to stringent, if ips score is higher 1.5
2012-02-29 <ckuhl@ipb-halle.de>
 * Version 1.11.8
 * Bugfix in findAdducts parallel mode, where wrong psgrp indices were stored in annoGrp
2012-02-17 <ckuhl@ipb-halle.de>
 * Version 1.11.7
 * Bugfix in findAdducts, where the ruleset is not saved within a xsAnnotate object with user defined rules
 * Changed a general groupCorr behaviour. If no edge is above correlation threshold, all peaks are seperated in pspecs of size 1
2012-02-15 <ckuhl@ipb-halle.de>
 * Version 1.11.6
 * Fix error in groupCorr: If sample is set to something other than 1 or NA, it result in a crash
2012-02-10 <ckuhl@ipb-halle.de>
  * Version 1.11.5
  * Bugfix in groupCorr where parameter cor_eic_th doesn't influence correlation across samples
  * Add new parameter for groupCorr cor_exp_th
2011-12-12 <ckuhl@ipb-halle.de>
  * Version 1.11.4
  * Add missing Rd page combinexsAnnos
2011-29-11 <ckuhl@ipb-halle.de>
  * Version 1.11.3
  * Add new function combinexsAnnos. It allows checking and reannotation of sample with a coressponding sample from the opposite ion mode
2011-24-11 <ckuhl@ipb-halle.de>
  * Version 1.11.2
  * Bugfix in annotateDiffreport: Since 1.7.7 mismatch of the peaklist from CAMERA and the diffreport function results 
    in false ordered peaktable
2011-10-11 <ckuhl@ipb-halle.de>
  * Version 1.11.1